updated for master slave arch

--- a/controlpanel/reports/application/configs/application.ini
+++ b/controlpanel/reports/application/configs/application.ini
@@ -21,7 +21,7 @@ resources.multidb.db2.dbname = quikr_alert
 ;for the procedure call
 ;PLEASE CHANGE TO PROPER CREDENTIALS BEFORE INDEXING ON LIVE
 resources.multidb.db3.adapter = PDO_MYSQL
-resources.multidb.db3.host = 192.168.2.7
+resources.multidb.db3.host = 127.0.0.1
 ;resources.db.params.port = 3306
 resources.multidb.db3.username = root
 resources.multidb.db3.password = qkr123@#
@@ -38,7 +38,7 @@ resources.multidb.db4.dbname = APPLICATION_PATH"/models/db/ngrt.sqlite"
 ;for write connection and premium ads
 ;PLEASE CHANGE TO PROPER CREDENTIALS BEFORE INDEXING ON LIVE
 resources.multidb.db5.adapter = PDO_MYSQL
-resources.multidb.db5.host = 192.168.2.7
+resources.multidb.db5.host = 127.0.0.1
 ;resources.db.params.port = 3306
 resources.multidb.db5.username = root
 resources.multidb.db5.password = qkr123@#
@@ -47,7 +47,7 @@ resources.multidb.db5.dbname = kijiji_presentation
 ;for archive DB - used for ads
 ;PLEASE CHANGE TO PROPER CREDENTIALS BEFORE INDEXING ON LIVE
 resources.multidb.db6.adapter = PDO_MYSQL
-resources.multidb.db6.host = 192.168.2.7
+resources.multidb.db6.host = 127.0.0.1
 ;resources.db.params.port = 3306
 resources.multidb.db6.username = root
 resources.multidb.db6.password = qkr123@#
@@ -79,6 +79,7 @@ solr.port = 8984
 solr.query_url.base = "http://localhost:8984/solr/"
 solr.query_url.users = "http://localhost:8984/solr/users/"
 solr.query_url.ads = "http://localhost:8984/solr/ads/"
+solr.query_url.slave.ads = "http://localhost:8986/solr/ads/"
 solr.query_url.replies = "http://localhost:8984/solr/reply/"
 solr.query_url.reply_with_ads = "http://localhost:8984/solr/reply_with_ads/"
 solr.query_url.alerts = "http://localhost:8984/solr/alert/"
